argocd/k8s/kube-prometheus-stack/manifests/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-http-route
  namespace: monitoring
spec:
  parentRefs:
    - name: homelab-gw
      namespace: cilium-gateway
      sectionName: homelab-https
  hostnames:
    - "prometheus.homelab.ikabbash.com" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
